--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://areumsheep/github.io/datayanolja"
+  "homepage": "https://youthful-mcnulty-cb0669.netlify.app"
 }
